--- a/.github/workflows/build-and-deploy-pdf.yml
+++ b/.github/workflows/build-and-deploy-pdf.yml
@@ -2,13 +2,12 @@ name: Build and Deploy PDF
 
 on:
   push:
-    branches:
-      - main
-      - master
+    tags:
+      - v*
   workflow_dispatch:
 
 env:
-  FILE_NAME: "GithubLatexTemplate"
+  FILE_NAME: "ReleaseFlowProposal"
 
 jobs:
   build-pdf:
